[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safethread"
version = "1.0.0"
authors = [{ name="Andre Luiz Romano Madureira", email="andre-romano@github.com" }]
description = "Python utilities classes for safe deployment and management of Threads, synchronization and Python data structures."
dependencies = []
